# ftxui-rocket-animation

./: CMakeLists.txt
include/: rocket.hpp
resources/: rocket.txt
src/: main.cpp  rocket.cpp
